Import of LICHTKIND/Kephra-0.3.10 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/interface/appbars.yml
+++ b/share/config/interface/appbars.yml
@@ -19,8 +19,11 @@ main_toolbar:
  - checkitem view-editpanel-line-wrap
  - checkitem view-window-stay-on-top
  -
+ - checkitem view-panel-notepad
+ - checkitem view-panel-output
+ -
  - item view-dialog-find#
- - item view-dialog-config
+ - item view-dialog-config#
  - item view-dialog-keymap#
 
 searchbar:
