--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -189,8 +189,11 @@
 			</toggle>
 			delete-all = Kephra::Edit::Bookmark::delete_all()
 		</bookmark>
-		tool-note = Kephra::Extention::Notepad::note()
-		tool-run-document = Kephra::Extention::Output::run()
+		<tool>
+			note = Kephra::Extension::Notepad::note()
+			run-document = Kephra::Extension::Output::run()
+			stop-document = Kephra::Extension::Output::stop()
+		</tool>
 		<document>
 			auto-indention = Kephra::Document::switch_autoindention()
 			brace-indention = Kephra::Document::switch_braceindention()
@@ -322,8 +325,8 @@
 				</margin>
 			</editpanel>
 			<panel>
-				notepad = Kephra::Extention::Notepad::switch_visibility()
-				output = Kephra::Extention::Output::switch_visibility()
+				notepad = Kephra::Extension::Notepad::switch_visibility()
+				output = Kephra::Extension::Output::switch_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::switch_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::switch_contextmenu_visibility()
@@ -470,6 +473,10 @@
 			with-confirm = Kephra::Edit::Search::_exist_find_item()
 			selection = Kephra::Edit::can_copy()
 		</replace>
+		<tool>
+			run-document = ! Kephra::Extension::Output::is_running()
+			stop-document = Kephra::Extension::Output::is_running()
+		</tool>
 	</enable>
 	<enable_event>
 		file-save = document.savepoint
@@ -499,6 +506,10 @@
 			with-confirm = find.item.changed
 			selection = document.text.select
 		</replace>
+		<tool>
+			run-document = extension.output.run
+			stop-document = extension.output.run
+		</tool>
 	</enable_event>
 	<state>
 		<search>
@@ -636,8 +647,8 @@
 				</margin>
 			</editpanel>
 			<panel>
-				notepad = Kephra::Extention::Notepad::get_visibility()
-				output = Kephra::Extention::Output::get_visibility()
+				notepad = Kephra::Extension::Notepad::get_visibility()
+				output = Kephra::Extension::Output::get_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::get_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::get_contextmenu_visibility()
@@ -663,8 +674,10 @@
 	</state>
 	<state_event>
 		<view>
-			editpanel-line-wrap = editpanel.autowrap#
-			window-stay-on-top = app.window.ontop#
+			panel-notepad = extension.notepad.visible
+			panel-output = extension.output.visible
+			editpanel-line-wrap = editpanel.autowrap
+			window-stay-on-top = app.window.ontop
 		</view>
 	</state_event>
 	<icon>
@@ -705,6 +718,8 @@
 				replace = replace_start.xpm
 			</dialog>
 			editpanel-line-wrap = line_wrap.xpm
+			panel-notepad = edit_edit.xpm
+			panel-output = console.xpm
 			toolbar-search = edit_delete.xpm
 			window-stay-on-top = stay_on_top.xpm
 		</view>
@@ -845,8 +860,11 @@
 				0 = ctrl+shift+0
 			</toggle>
 		</bookmark>
-		tool-note = f4
-		tool-run-document = f5
+		<tool>
+			note = f4
+			run-document = f5
+			stop-document = shift+f5
+		</tool>
 		<document>
 			<change>
 				back = ctrl+shift+back
