--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -17,6 +17,18 @@ full_menubar:
           - item file-open-dir
       - menu file_history
       -
+      -
+        menu file_session:
+          - item file-session-open
+          - item file-session-add
+          - item file-session-save
+          -
+          - item file-session-backup-open
+          - item file-session-backup-save
+          -
+          - item file-session-import
+          - item file-session-export
+      -
       - item file-save
       - menu file_save:#
       - item file-save-all
@@ -176,7 +188,9 @@ full_menubar:
   -
     menu tools:
       - item tool-note
+      -
       - item tool-run-document
+      - item tool-stop-document
   -
     menu document:
       -
@@ -322,17 +336,6 @@ full_menubar:
           - radioitem document-readonly-as-attr
           - radioitem document-readonly-on
           - radioitem document-readonly-off
-  -
-    menu file_session:
-      - item file-session-open
-      - item file-session-add
-      - item file-session-save
-      -
-      - item file-session-backup-open
-      - item file-session-backup-save
-      -
-      - item file-session-import
-      - item file-session-export
   -
     menu view:
       - checkitem view-window-stay-on-top
