--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -254,8 +254,11 @@
 			</toggle>
 			delete-all = Loesche Lesezeichen
 		</bookmark>
-		tool-note = Notiere
-		tool-run-document = Starte
+		<tool>
+			note = Notiere
+			run-document = Start
+			stop-document = Stop
+		</tool>
 		<document>
 			auto-indention = Autoeinrueckung
 			brace-indention = Klammereinrueckung
@@ -801,6 +804,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = schalte Notepadpanel ein oder aus
+				output = schalte Ausgabepanel ein oder aus
+			</panel>
 			statusbar = Statuszeile am Boden des Programmfensters
 			statusbar-contexmenu = schalte Kontextmenues der Statuszeile an oder aus
 			<statusbar-info>
