--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -254,8 +254,11 @@
 			</toggle>
 			delete-all = Delete Bookmarks
 		</bookmark>
-		tool-note = Note
-		tool-run-document = Run
+		<tool>
+			note = Note
+			run-document = Run
+			stop-document = Stop
+		</tool>
 		<document>
 			auto-indention = Autoindention
 			brace-indention = Braceindention
@@ -801,6 +804,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = switch visibility of the Notepad panel
+				output = switch visibility of the Output panel
+			</panel>
 			statusbar = switch visibility of the statusbar on bottom of the window
 			statusbar-contexmenu = enable or disable context menus on statusbar
 			<statusbar-info>
