Import of LICHTKIND/Kephra-0.3.10_2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_2
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/syntaxmode/perl.conf
+++ b/share/config/syntaxmode/perl.conf
@@ -1,6 +1,7 @@
 <syntaxmode>
     <about>
-        name = perl
+        ID = perl
+        name = Perl
         rants = 
     </about>
     <doc_properties>
