Import of LICHTKIND/Kephra-0.3.10_6 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_6
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_6.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name: Kephra
-version: 0.3.10.4
+version: 0.3.10.5
 abstract: crossplatform GUI Text-Editor
 author: lichtkind@cpan.org
 license: gpl
@@ -20,6 +20,7 @@ requires:
   YAML-Tiny: 0.31
   Config-General: 0.30
   Cwd: 0
+  File-Find: 0
   File-UserConfig: 0
   Text-Wrap: 0
 resources:
