--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -10,15 +10,22 @@
 			reload = Kephra::File::reload_current()
 			reload-all = Kephra::File::reload_all()
 			insert = Kephra::File::insert()
-			save = Kephra::File::save_current()
-			save-all = Kephra::File::save_all()
-			save-as = Kephra::File::save_as()
-			save-copy-as = Kephra::File::save_copy_as()
+			<save>
+				current = Kephra::File::save_current()
+				all = Kephra::File::save_all()
+				as = Kephra::File::save_as()
+				copy-as = Kephra::File::save_copy_as()
+			</save>
 			rename = Kephra::File::rename()
 			print = Kephra::File::print()
-			close = Kephra::File::close_current()
-			close-all = Kephra::File::close_all()
-			close-other = Kephra::File::close_other()
+			<close>
+				current = Kephra::File::close_current()
+				all = Kephra::File::close_all()
+				other = Kephra::File::close_other()
+				unsaved = Kephra::File::close_unsaved()
+				all-unsaved = Kephra::File::close_all_unsaved()
+				other-unsaved = Kephra::File::close_other_unsaved()
+			</close>
 			<session>
 				open = Kephra::File::Session::open_file()
 				add = Kephra::File::Session::add();
@@ -430,7 +437,7 @@
 		</config>
 	</call>
 	<enable>
-		file-save = Kephra::File::can_save()
+		file-save-current = Kephra::File::can_save()
 		file-save-all = Kephra::File::can_save_all()
 		<edit>
 			<changes>
@@ -479,7 +486,7 @@
 		</tool>
 	</enable>
 	<enable_event>
-		file-save = document.savepoint
+		file-save-current = document.savepoint
 		file-save-all = document.savepoint
 		<edit>
 			<changes>
@@ -685,10 +692,10 @@
 		<file>
 			new = file_new.xpm
 			open = file_open.xpm
-			save = file_save.xpm
+			save-current = file_save.xpm
 			save-all = file_save_all.xpm
 			print = file_print.xpm
-			close = file_close.xpm
+			close-current = file_close.xpm
 		</file>
 		<edit>
 			<changes>
@@ -736,13 +743,13 @@
 			reload = ctrl+shift+o
 			reload-all = ctrl+alt+o
 			insert = ctrl+shift+i
-			save = ctrl+s
+			save-current = ctrl+s
 			save-all = ctrl+alt+s
 			save-as = ctrl+shift+s
 			save-copy-as = alt+shift+s
 			rename = ctrl+alt+shift+s
 			print = ctrl+p
-			close = ctrl+q
+			close-current = ctrl+q
 			close-all = alt+q
 			close-other = ctrl+shift+q
 		</file>
