--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -10,11 +10,12 @@
 	</general>
 	<menu>
 		file = File
-		file_open = Open More
-		file_save = Save More
-		file_insert_templates = Templates
+		file_open = Open
+		file_save = Save
+		file_close = Close
 		file_history = Recently Closed
 		file_session = Session
+		file_insert_templates = Templates
 		edit = Edit
 		edit_changes = History
 		current_line = Line
@@ -85,14 +86,21 @@
 			reload-all = Reload All
 			rename = Rename ...
 			insert = Insert ...
-			save = Save
-			save-all = Save All
-			save-as = Save As ...
-			save-copy-as = Save Copy ...
+			<save>
+				current = Save
+				all = Save All
+				as = Save As ...
+				copy-as = Save Copy ...
+			</save>
 			print = Print ...
-			close = Close
-			close-all = Close All
-			close-other = Close Other
+			<close>
+				current = Close
+				all = Close All
+				other = Close Other
+				unsaved = Close Unsaved
+				all-unsaved = Close All Unsaved
+				other-unsaved = Close Other Unsaved
+			</close>
 			<session>
 				open = Open ...
 				add = Add ...
@@ -506,14 +514,21 @@
 			reload-all = reload all opened files
 			rename = change current files name
 			insert = insert file content at caret position
-			save = save the displayed state of the current file
-			save-all = save all the currently opened files
-			save-as = save current document under different file name
-			save-copy-as = save doc with different name, keep current version open
+			<save>
+				current = save the displayed state of the current file
+				all = save all the currently opened files
+				as = save current document under different file name
+				copy-as = save doc with different name, keep current version open
+			</save>
 			print = print the current document
-			close = close current document, if preset the file will be saved
-			close-all = close all open documents
-			close-other = close all open documents but not the current visible
+			<close>
+				current = close current document, if preset the file will be saved
+				all = close all open documents
+				other = close all open documents but not the current visible
+				unsaved = close current document without save it before it
+				all-unsaved = close all document without save it before it
+				other-unsaved = unsaved closing of all open docs but not the current visible
+			</close>
 			<session>
 				open = restore an once saved file session
 				add = add files of a saved file session
