--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -4,19 +4,26 @@ full_menubar:
     menu file:
       - item file-new
       -
-      - menu file_insert_templates
-      -
-      - item file-open
-      -
         menu file_open:
-          - item file-reload
-          - item file-reload-all
+          - item file-open
+          - item file-open-dir
           -
           - item file-insert 
           -
-          - item file-open-dir
-      - menu file_history
+          - item file-reload
+          - item file-reload-all
       -
+        menu file_close:
+          - item file-close-current
+          - item file-close-other
+          - item file-close-all
+          -
+          - item file-close-unsaved
+          - item file-close-other-unsaved
+          - item file-close-all-unsaved
+      -
+      - menu file_history
+      - menu file_insert_templates
       -
         menu file_session:
           - item file-session-open
@@ -29,17 +36,13 @@ full_menubar:
           - item file-session-import
           - item file-session-export
       -
-      - item file-save
       - menu file_save:#
+      - item file-save-current
       - item file-save-all
       - item file-save-as
       - item file-save-copy-as
       - item file-rename
       - item file-print#
-      -
-      - item file-close
-      - item file-close-other
-      - item file-close-all
       -
       - item app-exit
   -
