--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -10,11 +10,12 @@
 	</general>
 	<menu>
 		file = &Datei
-		file_open = Oeffnen Weitere
-		file_save = Speichern Weitere
-		file_insert_templates = &Templates
+		file_open = Oeffnen
+		file_save = Speichern
+		file_close = Schliessen
 		file_history = &Zuletzt Verwendete
 		file_session = &Gruppe
+		file_insert_templates = &Templates
 		edit = Bearbeiten
 		edit_changes = Aenderungen
 		current_line = Zeile
@@ -85,14 +86,21 @@
 			reload-all = Alle Erneut Laden
 			rename = Umbenennen ...
 			insert = Einfuegen ...
-			save = Speichern
-			save-all = Alle Speichern
-			save-as = Speichern Unter ...
-			save-copy-as = Kopie Speichern ...
+			<save>
+				current = Speichern
+				all = Alle Speichern
+				as = Speichern Unter ...
+				copy-as = Kopie Speichern ...
+			</save>
 			print = Drucken ...
-			close = Schliessen
-			close-all = Alle Schliessen
-			close-other = Andere Schliessen
+			<close>
+				current = Schliessen
+				all = Alle Schliessen
+				other = Andere Schliessen
+				unsaved = Schliessen Ungespeichert
+				all-unsaved = Alle Schliessen Ungespeichert
+				other-unsaved = Andere Schliessen Ungespeichert
+			</close>
 			<session>
 				open = Oeffnen ...
 				add = Hinzufuegen ...
@@ -506,14 +514,21 @@
 			reload-all = alle offenen Dateien erneut Einlesen
 			rename = aendere Dateinamen des aktuellen Dokuments
 			insert =  fuege Inhalt einer Datei am Textcursor ein
-			save = speichert das aktuelle Dokument in die Datei
-			save-all = speichert alle offenen Dokumente
-			save-as = speichere aktuelle Datei unter anderem Namen
-			save-copy-as = speichere unter Namen aber behalte diese Version
+			<save>
+				current = speichert das aktuelle Dokument in die Datei
+				all = speichert alle offenen Dokumente
+				as = speichere aktuelle Datei unter anderem Namen
+				copy-as = speichere unter Namen aber behalte diese Version
+			</save>
 			print = drucke aktuelles Dokument
-			close = schliesst das aktuelle Dokument
-			close-all = alle offenen Dokumente schliessen
-			close-other = schliesse offene Dokumente, ausser dem aktuellen 
+			<close>
+				current = schliesse das aktuelle Dokument
+				all = alle offenen Dokumente schliessen
+				other = schliesse offene Dokumente, ausser dem aktuellen
+				unsaved = schliesse das aktuelle Dokument ohne es zu speichern
+				all-unsaved = schliesse alle Dokumente ohne sie zu speichern
+				other-unsaved = ungesichertes schliessen aller anderen Dokumente
+			</close>
 			<session>
 				open = gespeicherte Dateigruppe wiederherstellen
 				add = gespeicherte Dateigruppe hinzufuegen
