Import of LICHTKIND/Kephra-0.3.10.10 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.10
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.10.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -15,14 +15,15 @@ no_index:
     - xt
 requires: 
   perl: 5.006
-  Wx:   0.70
-  Wx-Perl-ProcessStream: 0
-  YAML-Tiny: 0.31
-  Config-General: 0.30
   Cwd: 0
+  POSIX: 0
+  Text-Wrap: 0
   File-Find: 0
   File-UserConfig: 0
-  Text-Wrap: 0
+  Config-General: 0.30
+  YAML-Tiny: 0.31
+  Wx:   0.70
+  Wx-Perl-ProcessStream: 0
 resources:
     homepage: http://kephra.sf.net
     repository: http://kephra.svn.sourceforge.net/viewvc/kephra/dev/base/
