--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -85,7 +85,7 @@
 			reload = Erneut Laden
 			reload-all = Alle Erneut Laden
 			rename = Umbenennen ...
-			insert = Einfügen ...
+			insert = Einfügen Von ...
 			<save>
 				current = Speichern
 				all = Alle Speichern
