--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -85,7 +85,7 @@
 			reload = Reload
 			reload-all = Reload All
 			rename = Rename ...
-			insert = Insert ...
+			insert = Insert From ...
 			<save>
 				current = Save
 				all = Save All
