--- a/share/config/syntaxmode/perl.conf
+++ b/share/config/syntaxmode/perl.conf
@@ -99,14 +99,14 @@
  $_[0]->StyleSetSpec(30,"fore:#f36600,back:#fff8f8");                       # qw = Array
     </lexer>
     <tools>
-        debug = 
-        compile = 
+        debug = no
+        compile = no
         <comment>
             block = \#~
             box = \#~
             stream = no
         </comment>
         run =
-        tidy =
+        tidy = no
     </tools>
 </syntaxmode>
