--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -85,7 +85,7 @@
 			reload = Erneut Laden
 			reload-all = Alle Erneut Laden
 			rename = Umbenennen ...
-			insert = Einfuegen ...
+			insert = Einfuegen Von ...
 			<save>
 				current = Speichern
 				all = Alle Speichern
