Import of LICHTKIND/Kephra-0.3.10.11 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10.11
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10.11.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -2,6 +2,7 @@
 	<call>
 		<app>
 			exit = Kephra::App::exit()
+			exit-unsaved = Kephra::App::exit_unsaved()
 		</app>
 		<file>
 			new = Kephra::File::new()
@@ -737,6 +738,7 @@
 		#use_file_type = 1
 	</icon>
 	<key>
+		app-exit = alt+f4
 		<file>
 			new = ctrl+n
 			open = ctrl+o
