--- a/share/config/localisation/cesky_iso.conf
+++ b/share/config/localisation/cesky_iso.conf
@@ -77,6 +77,7 @@
 	<label>
 		<app>
 			exit = Exit
+			exit-unsaved = Exit Without Save
 		</app>
 		<file>
 			new = New
@@ -300,7 +301,7 @@
 				ave = Avennue
 				baan = Baan
 				batch = Batch
-				c = C / C++
+				c = C | C++
 				conf = Conf
 				context = Context
 				cs = C\#
@@ -504,7 +505,8 @@
 	</label>
 	<help>
 		<app>
-			exit = Exit
+			exit = close down the entire Application
+			exit-unsaved = exit app without saving the open files
 		</app>
 		<file>
 			new = opens a new empty text
@@ -688,7 +690,11 @@
 			</toggle>
 			delete-all = delete all bookmarks
 		</bookmark>
-		tool-run-document = run current programm and show result in output panel
+		<tool>
+			note = jump to the notepad
+			run-document = run current programm and show result in output panel
+			stop-document = stop the current running output panel process
+		</tool>
 		<document>
 			auto-indention = indents new line like previous when Enter pressed 
 			brace-indention = obey right indention after curly braces when press enter
