--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -77,6 +77,7 @@
 	<label>
 		<app>
 			exit = Beenden
+			exit-unsaved = Beenden ohne Speichern
 		</app>
 		<file>
 			new = Neu
@@ -300,7 +301,7 @@
 				ave = Avennue
 				baan = Baan
 				batch = Batch
-				c = C / C++
+				c = C | C++
 				conf = Conf
 				context = Context
 				cs = C\#
@@ -504,7 +505,8 @@
 	</label>
 	<help>
 		<app>
-			exit = beende Programm, speichere Einstellungen
+			exit = beende Programm, speichere Dateien und Einstellungen
+			exit-unsaved = beende ohne die geoeffneten Dateien zu speichern
 		</app>
 		<file>
 			new = oeffnet ein neues leeres Dokument
@@ -688,7 +690,11 @@
 			</toggle>
 			delete-all = loesche alle Lesezeichen
 		</bookmark>
-		tool-run-document = starte aktuelles Programm und zeig Ergebnis im output panel
+		<tool>
+			note = wechsle zum Notizblock
+			run-document = starte aktuelles Programm und zeig Ergebnis im Outputpanel
+			stop-document = halte Interpreterprozess des Oututpanels an
+		</tool>
 		<document>
 			auto-indention = rueckt bei Enter neue Zeilen wie vorige ein
 			brace-indention = beachtet Einrueckungen nach geschweiften Klammern
