Import of LICHTKIND/Kephra-0.3.10_18 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.10_18
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.10_18.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -218,8 +218,8 @@
 				lf = Kephra::Document::convert_EOL('lf')
 			</EOL>
 			<move>
-				left = Kephra::Document::move_left()
-				right = Kephra::Document::move_right()
+				left = Kephra::Document::Change::move_left()
+				right = Kephra::Document::Change::move_right()
 			</move>
 			<readonly>
 				as-attr = Kephra::Document::set_readonly('protect')
