--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -387,8 +387,7 @@ full_menubar:
       - item view-editpanel-font
   -
     menu config:
-      - item view-dialog-config
-      -
+      - item view-dialog-config#
       -
         menu config_global:
           - item config-file-global-open
