Import of LICHTKIND/Kephra-0.4.0_2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.0_2
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.0_2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -738,7 +738,7 @@
 		#use_file_type = 1
 	</icon>
 	<key>
-		app-exit = alt+f4
+		app-exit = alt+q
 		<file>
 			new = ctrl+n
 			open = ctrl+o
@@ -752,7 +752,7 @@
 			rename = ctrl+alt+shift+s
 			print = ctrl+p
 			close-current = ctrl+q
-			close-all = alt+q
+			close-all = ctrl+alt+q
 			close-other = ctrl+shift+q
 		</file>
 		<edit>
