Import of LICHTKIND/Kephra-0.4.0_4 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.0_4
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.0_4.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -387,7 +387,8 @@ full_menubar:
       - item view-editpanel-font
   -
     menu config:
-      - item view-dialog-config#
+      - item view-dialog-config
+      -
       -
         menu config_global:
           - item config-file-global-open
