--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -985,6 +985,8 @@
 		open_dir = Oeffne Dateien im Verzeichnis :
 		file_changed = Dateiaenderung
 		file_changed_msg = Die folgende Datei hat sich geaendert:
+		file_deleted = Datei Geloescht
+		file_deleted_msg = Die folgende Datei ist unauffindbar:
 	</file>
 	<general>
 		apply = Uebernehmen
@@ -1000,6 +1002,7 @@
 		select = Waehle
 		selected = Auswahl
 		changed = Geaendert
+		deleted = Geloescht
 		none = Keine
 		dont_allow = Deine Einstellungen erlauben das nicht.
 	</general>
