--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -985,6 +985,8 @@
 		open_dir = Öffne Dateien in Verzeichnis :
 		file_changed = Dateiänderung
 		file_changed_msg = Die folgende Datei hat sich geändert:
+		file_deleted = Datei Gelöscht
+		file_deleted_msg = Die folgende Datei ist unauffindbar:
 	</file>
 	<general>
 		apply = Übernehmen
@@ -1000,6 +1002,7 @@
 		select = Wähle
 		selected = Auswahl
 		changed = Geändert
+		deleted = Gelöscht
 		none = Keine
 		dont_allow = Deine Einstellungen erlauben das nicht.
 	</general>
