--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -985,6 +985,8 @@
 		open_dir = Open Files of Directory :
 		file_changed = File Changed
 		file_changed_msg = The following file has changed:
+		file_deleted = File Deleted
+		file_deleted_msg = The following file can not be found anymore:
 	</file>
 	<general>
 		apply = Apply
@@ -1000,6 +1002,7 @@
 		select = Select
 		selected = Selected
 		changed = Changed
+		deleted = Deleted
 		none = None
 		dont_allow = Your settings dont allow this.
 	</general>
