--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -349,12 +349,6 @@ full_menubar:
           - checkitem view-panel-notepad
           - checkitem view-panel-output
       -
-        menu view_bars:
-          - checkitem view-toolbar-main
-          - checkitem view-tabbar
-          - checkitem view-toolbar-search
-          - checkitem view-statusbar
-      -
         menu view_contextmenu:
           - checkitem view-tabbar-contexmenu
           -
@@ -364,9 +358,15 @@ full_menubar:
               - radioitem view-editpanel-contextmenu-no
           - checkitem view-statusbar-contexmenu
       -
+        menu view_bars:
+          - checkitem view-toolbar-main
+          - checkitem view-tabbar
+          - checkitem view-toolbar-search
+          - checkitem view-statusbar
+      -
       - checkitem view-editpanel-margin-marker
       - checkitem view-editpanel-margin-line-number
-      - checkitem view-editpanel-margin-text-fold#
+      - checkitem view-editpanel-margin-text-fold
       -
         menu view_textmargin:
           - radioitem view-editpanel-margin-text-0
