Import of LICHTKIND/Kephra-0.4.1.2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.1.2
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.1.2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -331,6 +331,10 @@
 						12 = Kephra::App::EditPanel::Margin::set_text_width(12)
 					</text>
 				</margin>
+				<fold-toggle>
+					here = Kephra::App::EditPanel::Margin::toggle_here()
+					siblings = Kephra::App::EditPanel::Margin::toggle_siblings()
+				</fold-toggle>
 			</editpanel>
 			<panel>
 				notepad = Kephra::Extension::Notepad::switch_visibility()
@@ -871,6 +875,10 @@
 				info = alt+shift+i
 				keymap = alt+shift+k
 			</dialog>
+			<editpanel-fold-toggle>
+				here = alt+plus
+				siblings = alt+shift+plus
+			</editpanel-fold-toggle>
 			panel-notepad = ctrl+f4
 			panel-output = ctrl+f5
 			window-stay-on-top = ctrl+t
